# mad-migration

./: .gitignore  404.html  LICENSE  README.md  app.py  conf.py  db.py  index.html  mkdocs.yml  my.yaml  mysql.yaml  onneks.yaml  p.yaml  postgres.yaml  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  test.yaml  tox.ini
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: deploy-docs.yml  main.yml  python-publish.yml
.scannerwork/: report-task.txt
config/: conf.py  config_schema.py
db_init/: connection_engine.py
docs/: example.md  getting-started.md  index.md  install.md  license.md
example/: index.html
examples/: my.yaml  mysql.yaml  pg-mongo.yaml  postgre-mongo.yaml  postgres-to-mongo.yaml  postgres-to.yaml  postgres.yaml  test.yaml
examples/services/: companytb.yaml  lenders.yaml
examples/splitted/: agents.yaml  branch.yaml  main.yaml  op_cond.json  op_types.yaml  operations.yml  operators.yaml
getting-started/: index.html
install/: index.html
license/: index.html
madmigration/: __init__.py  controller.py  display.py  errors.py  mad_migration.py  main.py  run.py
madmigration/basemigration/: __init__.py  base.py  base_migration.py  full_migration.py  mysql_migration.py  postgresql_migration.py
madmigration/config/: conf.py  config_schema.py  logger_config.yml
madmigration/db_init/: async_connection_engine.py  base_engine.py  connection_engine.py  connection_utils.py
madmigration/db_operations/: async_operations.py  operations.py  relationships.py
madmigration/fullmigration/: __init__.py  postgresql_full_migration.py
madmigration/mongodb/: migration.py  type_convert.py
madmigration/mssql/: migration.py  type_convert.py
madmigration/mysqldb/: migration.py  type_convert.py
madmigration/scripts/: commands.py  (+1 more)
scripts/: start.py
search/: search_index.json
tests/: config_schema_test.py  conftest.py  helper_funcs_test.py  pytest.ini
utils/: helpers.py
(+12 files in other folders)
