[tool.poetry]
name = "madmigration"
version = "0.1.26"
description = "Mad Migration"
authors = ["Hasan <hasan.aleeyev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
alembic = "^1.8.1"
coloredlogs = "^15.0.1"
click = "^8.1.3"
pydantic = "^1.10.2"
python-dateutil = "^2.8.2"
pyyaml = "^6.0"
regex = "^2022.10.31"
sqlalchemy = "^1.4.44"
sqlalchemy-utils = "^0.38.3"
mysql = "^0.0.3"
psycopg2 = "^2.9.5"
pymongo = "^4.3.2"


[tool.poetry.group.docs.dependencies]
mkdocs = "*"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^5.0.4"
pyflakes = "^2.5.0"


[tool.poetry.group.mysql.dependencies]
mysqlclient = "^2.1.1"
pymysql = "^1.0.2"


[tool.poetry.group.postgresql.dependencies]
psycopg2 = "^2.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
madmigration = 'madmigration.run:run'