[tool.poetry]
name = "madmigration"
version = "0.1.32"
description = "Mad Migration"
authors = ["Hasan <hasan.aleeyev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
coloredlogs = "^15.0.1"
click = "^8.1.7"
pydantic = "^2.7.1"
python-dateutil = "^2.9.0.post0"
pyyaml = "^6.0.1"
regex = "^2024.4.16"
mysql = "^0.0.3"
pymongo = "^4.7.0"
psycopg2 = "^2.9.9"
mysqlclient = "^2.2.4"
pymysql = "^1.1.0"
sqlalchemy = "1.4"
sqlalchemy-utils = "^0.41.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.2"
flake8 = "^7.0.0"
pyflakes = "^3.2.0"
black = "^24.4.2"
tox = "^4.15.0"



[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.19"
mkdocs-markdownextradata-plugin = "^0.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
madmigration = 'madmigration.main:cli'
